--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -9,13 +9,27 @@
 html {
     box-sizing: border-box;
     background: rgba($light-blue, .5);
-    font: 300 100%/1.5 Avenir;
+    font: 400 100%/1.5 "proxima-nova";
+    color: $text;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
 
 }
+.caps {
+  text-transform: uppercase;
+}
 
+.instruction {
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+.byline {
+  letter-spacing: 2px;
+  opacity: .75;
+}
 img {
     max-width: 100%;
 }
@@ -27,4 +41,22 @@ a {
     &:hover {
         color: $pale-gold;
     }
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+p {
+  font-size: 1.25rem;
+  margin: 0 0 1rem;
+  &:last-of-type {
+    margin: 0;
+  }
 }
