--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -4,3 +4,8 @@ $pale-gold: #DBC182;
 $gray: #262626;
 $gray-lite: #979797;
 $off-white: #f3f3f3;
+$text: #3c3c3c;
+
+$red: #922b2b;
+$yellow: #ffae00;
+$green: #018011;
